--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "todo-app",
-  "homepage": "https://abayreushenov.github.io/todo-app",
+  "name": "todolist",
+  "homepage": "https://abayreushenov.github.io/todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
